# ai-agent

./: .env.example  .gitignore  PROJECT_RESUME.md  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/ai_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: main.py
backend/app/agents/: llm.py
backend/app/agents/graph/: builder.py  nodes.py  router.py  state.py
backend/app/agents/tools/: excel_analyze.py  rag_search.py  registry.py  sql_query.py  weather.py
backend/app/api/v1/: auth.py  chat.py  knowledge.py  router.py  ws.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/rag/: embedder.py  parser.py  retriever.py
backend/app/tasks/: celery_app.py  index_document.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/knowledge/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/layout/: AppShell.tsx
frontend/src/lib/: api.ts  ws.ts
